[project]
name = "ldu-tool"
version = "1.0.0"
description = "Linux DLC Unlocker Tool - unlocks all DLCs for Stellaris game."
dependencies = ["requests", "tqdm>=4.67.3"]
requires-python = ">=3.8"

[project.scripts]
ldu-tool = "modules.main:run"

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"