[project]
name = "ldu-tool"
version = "2.2.0"
description = "Linux DLC Unlocker Tool - unlocks all DLCs for Stellaris game."
dependencies = ["requests", "tqdm>=4.67.3", "dirhash==0.5.0", "typer==0.24.2"]
requires-python = ">=3.8"

[project.scripts]
ldu-tool = "modules.main:app"

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
where = ["."]

[tool.setuptools.package-data]
"modules" = ["games/**/*"]
